refactor: code optimization and component refactoring
- Optimize mock data for production (dev-only generation)
- Delete outdated code-context.md documentation
- Fix UI components and services exports completeness
- Move useSearch hook to central hooks folder
- Add bundle analyzer scripts to package.json
- Fix TypeScript any types in sitemap.ts and setup.tsx
- Enable test type-checking in tsconfig.json
- Extract useKeyboardShortcuts hook from AudioPlayer
- Update Logo branding text
- General code cleanup and structural improvements

--- a/audiotruyen-clone/package.json
+++ b/audiotruyen-clone/package.json
@@ -6,10 +6,17 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint",
-    "test": "vitest"
+    "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,css}\"",
+    "type-check": "tsc --noEmit",
+    "test": "vitest",
+    "analyze": "set ANALYZE=true && next build",
+    "analyze:server": "set BUNDLE_ANALYZE=server && next build",
+    "analyze:browser": "set BUNDLE_ANALYZE=browser && next build"
   },
   "dependencies": {
+    "@next/bundle-analyzer": "^16.1.6",
     "@radix-ui/react-slot": "^1.2.4",
     "axios": "^1.13.3",
     "class-variance-authority": "^0.7.1",
@@ -23,6 +30,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.4.0",
     "@testing-library/react": "^16.3.2",
     "@types/node": "^20",
     "@types/react": "^19",
@@ -31,6 +39,7 @@
     "eslint": "^9",
     "eslint-config-next": "16.1.4",
     "jsdom": "^27.4.0",
+    "prettier": "^3.8.1",
     "tailwindcss": "^4",
     "typescript": "^5",
     "vitest": "^4.0.18"
