feat: complete Phase 2 optimization - Quality & Testing

--- a/audiotruyen-clone/package.json
+++ b/audiotruyen-clone/package.json
@@ -6,14 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint src",
     "lint:fix": "next lint --fix",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,css}\"",
     "type-check": "tsc --noEmit",
     "test": "vitest",
     "analyze": "set ANALYZE=true && next build",
     "analyze:server": "set BUNDLE_ANALYZE=server && next build",
-    "analyze:browser": "set BUNDLE_ANALYZE=browser && next build"
+    "analyze:browser": "set BUNDLE_ANALYZE=browser && next build",
+    "prepare": "husky"
   },
   "dependencies": {
     "@next/bundle-analyzer": "^16.1.6",
@@ -32,16 +33,28 @@
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.4.0",
     "@testing-library/react": "^16.3.2",
+    "@testing-library/user-event": "^14.6.1",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@vitejs/plugin-react": "^5.1.2",
     "eslint": "^9",
     "eslint-config-next": "16.1.4",
+    "husky": "^9.1.7",
     "jsdom": "^27.4.0",
+    "lint-staged": "^16.2.7",
     "prettier": "^3.8.1",
     "tailwindcss": "^4",
     "typescript": "^5",
     "vitest": "^4.0.18"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{json,css,md}": [
+      "prettier --write"
+    ]
   }
 }
