--- a/audiotruyen-clone/tsconfig.json
+++ b/audiotruyen-clone/tsconfig.json
@@ -10,6 +10,8 @@
     "skipLibCheck": true,
     "strict": true,
     "noEmit": true,
+    "noUncheckedIndexedAccess": true,
+    "noImplicitOverride": true,
     "esModuleInterop": true,
     "module": "esnext",
     "moduleResolution": "bundler",
