--- a/audiotruyen-clone/package.json
+++ b/audiotruyen-clone/package.json
@@ -17,10 +17,6 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.1",
-    "@mui/material": "^7.3.7",
-    "@mui/material-nextjs": "^7.3.7",
     "@radix-ui/react-slot": "^1.2.4",
     "axios": "^1.13.3",
     "class-variance-authority": "^0.7.1",
@@ -36,6 +32,7 @@
   },
   "devDependencies": {
     "@next/bundle-analyzer": "16.1.6",
+    "@rollup/rollup-win32-x64-msvc": "^4.57.1",
     "@tailwindcss/postcss": "^4",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.4.0",
